# secretsh

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates.yml  publish-homebrew.yml  publish-pypi.yml  release-binaries.yml
docs/: architecture.md  cli.md  python-api.md  testing.md  threat-model.md  tokenizer.md  vault-format.md
docs/integrations/: README.md  langchain.md  openclaw.md  pydanticai.md
examples/: .env.example  basic_cli.sh  basic_python.py  langchain_shell_tool_demo.py  multi_vault.py
python/: pyproject.toml
python/secretsh/: __init__.py  __init__.pyi
python/tests/: conftest.py  test_secretsh.py
src/: cli.rs  dotenv.rs  error.rs  harden.rs  lib.rs  main.rs  python.rs  redact.rs  spawn.rs  tokenizer.rs  vault.rs
tests/: cli_no_shell.rs  cli_set.rs  e2e.rs  test_python_bindings.py
