[package]
name = "secretsh"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
description = "Secure subprocess secret injection for AI agents"
license = "MIT"
repository = "https://github.com/lthoangg/secretsh"
homepage = "https://github.com/lthoangg/secretsh"
documentation = "https://docs.rs/secretsh"
readme = "README.md"
keywords = ["security", "secrets", "subprocess", "redaction", "ai"]
categories = ["command-line-utilities"]
authors = ["Hoang Le <lthoangg@users.noreply.github.com>"]
exclude = [
    ".github/",
    "docs/",
    "fuzz/",
    "target/",
    "python/",
    "tests/",
    ".venv/",
    ".pytest-venv/",
]

[[bin]]
name = "secretsh"
path = "src/main.rs"

[lib]
name = "secretsh"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Hashing (audit logs)
ring = "0.17"

# Secret memory
zeroize = { version = "1", features = ["derive"] }

# Output redaction
aho-corasick = "1"

# Encoding for redaction patterns
base64 = "0.22"
percent-encoding = "2"
hex = "0.4"

# Serialization (audit logging)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Platform
libc = "0.2"

# Error handling
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
